--- a/pages/temporadas.html
+++ b/pages/temporadas.html
@@ -38,7 +38,7 @@
         <div>
             <h3 class="temporada">Primeira temporada</h3>
         
-        <li><img src="/imagens/temporadas/primeira.webp" alt="primeira temporada"></li>
+        <li><img src="../imagens/temporadas/primeira.webp" alt="primeira temporada"></li>
 
 
         <p>A primeira temporada começa com Sam em Stanford, onde estava prestes a ingressar no curso de Direito, quando Dean aparece, afirmando que o pai deles desapareceu durante uma caçada. Dean pede ajuda a Sam, mas ele não quer ir devido a uma entrevista de trabalho, além de alguns problemas de antigamente com seu pai, John Winchester. No fim, Sam aceita ir com Dean e os irmãos partem para a sua viagem. Durante a busca, a namorada de Sam, Jessica, é morta nas mesmas condições em que a sua mãe perdeu a vida. Sam sente-se culpado por não ter conseguido protege-la e por esconder dela quem ele e a familia dele eram - caçadores de coisas sobrenaturais - por isso desiste da Universidade para caçar o que matou a sua namorada. No episódio cinco ("Bloody Mary") é revelado que Sam teve premonições da morte de Jessica, semanas antes de acontecer. Ao mesmo tempo que caçam o que matou Jessica e a sua mãe, Dean e Sam procuram o seu pai e ajudam pessoas a lutar contra criaturas sobrenaturais. Viajam por todo o país, juntando cada vez mais pistas. Algum tempo após a sua partida, encontram John que lhes revela que a criatura que procuram é um demônio e que ele está a planejar usar a Colt, um revólver místico que mata qualquer coisa, feito há muito tempo atrás. Contudo, no final da temporada, depois de não conseguirem matar o demônio, pois o demônio possuiu John e Sam não teve coragem de matar o pai, os três ficam gravemente feridos num acidente de automóvel causado por um outro demônio, que possuiu um caminhoneiro e tomou o controle do caminhão, causando um grave acidente, tentando matar os três.</p>
@@ -47,7 +47,7 @@
         <div>
             <h3>Segunda temporada</h3>
         
-        <li><img src="/imagens/temporadas/segunda.jpg" alt="segunda temporada"></li>
+        <li><img src="../imagens/temporadas/segunda.jpg" alt="segunda temporada"></li>
 
         <p>Na segunda temporada Sam e John escapam do acidente apenas com ferimentos ligeiros, mas Dean está morrendo e o seu pai faz um acordo com o demónio dos olhos amarelos(Azazel), dando-lhe o Colt e a sua alma em troca da vida de Dean. O Chevy Impala fica destroçado. Na segunda temporada torna-se claro que o demônio tem grandes planos para Sam. Na noite da morte da sua mãe, Sam foi infectado com sangue de demónio, o que lhe deu certas habilidades psíquicas quando se tornou adulto. O demónio fez o mesmo a outras crianças que os Winchester conhecem no decorrer da temporada. Os irmãos também conhecem novos aliados. Ellen, Jo e Ash ajudam-nos nas suas caçadas, assim como Bobby, um velho amigo da família. Na primeira parte do último episódio, o demónio junta todas as crianças especiais numa vila abandonada para lutarem uns contra os outros, até que só haja um sobrevivente. Sam é morto por Jake, o vencedor, sucumbindo nos braços de Dean. Para trazer Sam de volta, Dean vende a sua alma, ficando apenas com um ano para viver. Juntos, os irmãos matam o demônio (Azazel), mas não antes de, Azazel, através de Jake, conseguir abrir as portas do Inferno, deixando muitos demônios escaparem. John também consegue sair do Inferno e ajuda Dean a matar Azazel. No fim parece ir para um lugar melhor</p>
     </div>
